# altmotion

./: Cargo.toml
examples/: example.rs  seq_renderer.rs  ui.rs
src/: clip.rs  clips.rs  core.rs  lib.rs  project.rs  renderer.rs  sequence_renderer.rs  shader.wgsl  wgpu_renderer.rs
