[package]
name = "altmotion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-skia = "0.5.1"
wgpu = "0.9.0"
async-std = "1.9.0"
async-trait = "0.1.50"

bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.9.0"
renderdoc = "0.10.1"
fps_counter = "2.0.0"

