[package]
name = "altmotion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-skia = "0.5.1"
wgpu = "0.9.0"
async-std = "1.9.0"
async-trait = "0.1.50"
timeliner = {git = "https://github.com/cathiecode/timeliner-rs"}

bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.9.0"
renderdoc = "0.10.1"
fps_counter = "2.0.0"

iced = { version = "0.3.0", default-features=false, features = ["glow"] } # I'm using glow backend because current iced_wgpu conflicts with wgpu 0.9.0!
iced_graphics = "0.2.0"
iced_native = "0.4.0"
